Modify card images to stop stretching

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -391,6 +391,7 @@ hr {
     grid-column: 1/4;
     max-width: 100%;
     max-height: 100%;
+    padding: 0 18rem;
   }
   .cardPopup .popup-paragraph {
     grid-row: 3/4;
