--- a/scss/components/_cardpopup.scss
+++ b/scss/components/_cardpopup.scss
@@ -29,6 +29,7 @@
       grid-column: 1/4;
       max-width: 100%;
       max-height: 100%;
+      padding: 0 18rem;
     }
 
     .popup-paragraph {
